force-app/main/default/objects/Lot_Item__c/Lot_Item__c.object-meta.xml
<CustomObject>
    <description>This object enable practices to comply with regulations easily, track buy, medication, and minimize waste.</description>
    <label>Lot Item</label>
    <nameField>
        <label>Lot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lot Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>