force-app/main/default/objects/Lot_Item__c/fields/Arrival_Date__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Date__c</fullName>
    <description>Records the date when the lot item arrived.</description>
    <label>Arrival Date</label>
    <type>Date</type>
</CustomField>