force-app/main/default/objects/Lot_Item__c/fields/Available_Qty__c.field-meta.xml
<CustomField>
    <fullName>Available_Qty__c</fullName>
    <description>Indicates the quantity of the lot item currently available.</description>
    <label>Available Quantity</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>