force-app/main/default/objects/Lot_Item__c/fields/Cost__c.field-meta.xml
<CustomField>
    <fullName>Cost__c</fullName>
    <description>Represents the purchase cost associated with the lot item.</description>
    <defaultValue>0</defaultValue>
    <label>Purchase Cost</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>