force-app/main/default/objects/Lot_Item__c/fields/Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date__c</fullName>
    <description>Captures the expiry date of the lot item.</description>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>