force-app/main/default/objects/Lot_Item__c/fields/Lot_Number__c.field-meta.xml
<CustomField>
    <fullName>Lot_Number__c</fullName>
    <description>Identifies the lot number associated with the lot item.</description>
    <label>Lot Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>