force-app/main/default/objects/Lot_Item__c/fields/Ordered_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Ordered_Quantity__c</fullName>
    <description>Specifies the quantity of the lot item that has been ordered.</description>
    <defaultValue>0</defaultValue>
    <label>Ordered Quantity</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>