force-app/main/default/objects/Lot_Item__c/fields/Procedure_Codes__c.field-meta.xml
<CustomField>
    <fullName>Procedure_Codes__c</fullName>
    <description>Represents the item name or product associated with the lot item.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Item Name</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 OR 3) AND 2</booleanFilter>
        <filterItems>
            <field>Procedure__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Template Inventory</value>
        </filterItems>
        <filterItems>
            <field>Procedure__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Procedure__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Template Medication</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Procedure__c</referenceTo>
    <relationshipLabel>Lot Items</relationshipLabel>
    <relationshipName>Inventory_Lot_Items</relationshipName>
    <type>Lookup</type>
</CustomField>