force-app/main/default/objects/Lot_Item__c/fields/Supplier_Name__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Name__c</fullName>
    <description>Stores the name of the vendor or supplier providing the lot item.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Vendor Account</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Lot Items</relationshipLabel>
    <relationshipName>Inventory_Lot_Items</relationshipName>
    <type>Lookup</type>
</CustomField>