force-app/main/default/objects/Lot_Item__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Specifies the type or category of the lot item.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invetory</fullName>
                <label>Inventory</label>
            </value>
            <value>
                <fullName>Medication</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>