force-app/main/default/objects/Lot_Item__c/fields/Wastage_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Wastage_Quantity__c</fullName>
    <description>Captures the quantity of the lot item that has been wasted.</description>
    <inlineHelpText>Adjust your available quantity based on the wastage.</inlineHelpText>
    <label>Wastage Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>