force-app/main/default/objects/Lot_Item__c/recordTypes/Inventory.recordType-meta.xml
<RecordType>
    <fullName>Inventory</fullName>
    <active>true</active>
    <description>To hold inventory items like Injectables, gloves etc.</description>
    <label>Inventory</label>
</RecordType>