force-app/main/default/objects/Lot_Item__c/recordTypes/Procedure.recordType-meta.xml
<RecordType>
    <fullName>Procedure</fullName>
    <active>true</active>
    <label>Procedure</label>
</RecordType>