force-app/main/default/objects/Lot_Item__c/validationRules/Null_validation_for_Qty.validationRule-meta.xml
<ValidationRule>
    <fullName>Null_validation_for_Qty</fullName>
    <active>true</active>
    <errorConditionFormula>ISNULL( Available_Qty__c ) ||  ISBLANK(Available_Qty__c )   &amp;&amp; Available_Qty__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Available_Qty__c</errorDisplayField>
    <errorMessage>Available Quantity should not be null blank and should not be less than 0</errorMessage>
</ValidationRule>