force-app/main/default/objects/Lot_Item__c/validationRules/procedure_should_not_change_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>procedure_should_not_change_validation</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Procedure_Codes__c)</errorConditionFormula>
    <errorDisplayField>Procedure_Codes__c</errorDisplayField>
    <errorMessage>You are not allowed to change procedure</errorMessage>
</ValidationRule>