force-app/main/default/objects/Lot_Item__c/validationRules/wastageQtyNotGreaterThenOrdQty.validationRule-meta.xml
<ValidationRule>
    <fullName>wastageQtyNotGreaterThenOrdQty</fullName>
    <active>true</active>
    <errorConditionFormula>Wastage_Quantity__c &gt;  Ordered_Quantity__c</errorConditionFormula>
    <errorMessage>Wastage Quantity cannot be greater than Ordered Quantity</errorMessage>
</ValidationRule>